# AI-server

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  ORCHESTRATOR_AUTHORITY.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/bitrix24/: instructions.md  manifest.yaml  (+2 more)
config/: result_templates.example.json
deploy/: ai-server-scheduler.service  ai-server-worker.service  ai-server.service  migrate_sprint11.sql  vehicle_usage_production_runbook.md
docs/: 00-vision.md  01-architecture.md  02-agents.md  03-client-support-flow.md  04-security-and-policies.md  05-mvp-roadmap.md  06-hybrid-rag.md  07-bitrix-automations.md  08-agent-system-roadmap.md  09-work-scenario-runner.md  10-real-integration-tests-roadmap.md  11-diagnostic-error-roadmap.md
scripts/: _pre_push_hook  bitrix_staging_e2e_runner.py  build_t0006_s03_mixed_requests.py  build_t0006_s03_requests.py  create_bitrix_dev_chat.py  error_report.py  import_bitrix_var.py  kartoteka_import.py  run_local_orchestrator_harness.py  run_t0006_s03_final_corpus.py  smoke_bitrix_task_create_flow.py  work_scenario_runner.py
tests/: __init__.py  conftest.py  fakes.py  test_admin_routes.py  test_agent_file_standard.py  test_agent_queue_partitioning.py  test_automations.py  test_base_specialist_publisher.py  test_bitrix_auto_lines.py  test_bitrix_dialog_guard.py  test_bitrix_integration.py  test_bitrix_my_tasks_tool.py  test_bitrix_policy.py  test_bitrix_specialist.py  test_bitrix_staging_e2e_runner.py  test_bitrix_task_project_search_tools.py  test_bitrix_tools_direct.py  test_bitrix_warehouse_format.py  test_bitrix_workers.py  test_calendar_event_tools.py  test_call_specialist_tool.py  test_call_specialist_trace_context.py  test_capability_registry.py  test_conversation_reference.py  test_conversation_trace.py  test_diagnost_store.py  test_diagnost_tools.py  test_diagnost_worker.py  test_diagnostic_agent.py  test_dialog_state_extended.py  test_document_text.py  test_document_tools.py  test_draft_confirmation.py  test_embeddings.py  test_feedback_loop.py  test_feedback_receiver.py  test_footer_integration.py  test_hybrid_retrieval.py  test_index_loader.py  test_internal_llm_helpers.py  (+50 more)
var/: README.md
(+326 files in other folders)
