[project]
name = "ai-server"
version = "0.1.0"
description = "Corporate multi-agent AI server prototype"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
retrieval = [
    "fastembed>=0.6.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]


