[project]
name = "ai-server"
version = "0.1.0"
description = "Corporate multi-agent AI server prototype"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8.0",
    "pypdf>=6.12.2",
    "pyyaml>=6.0.0",
    "redis[asyncio]>=5.0",
    "uvicorn[standard]>=0.30.0",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
retrieval = [
    "fastembed>=0.6.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "anyio>=4.0",
    "fakeredis>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/ai_server"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["scripts/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes (unused imports, undefined names, etc.)
    "I",      # isort (import ordering)
    "B",      # flake8-bugbear (common bugs)
    "SIM",    # flake8-simplify (simplify code)
    "UP",     # pyupgrade (modern Python syntax)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM105", # contextlib.suppress is less readable than try/except pass for asyncio cancellation
    "SIM108", # ternary is sometimes less readable than if/else
]

[tool.ruff.lint.isort]
known-first-party = ["ai_server"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


